--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "googleapis": "^165.0.0",
     "input-otp": "^1.2.4",
+    "jose": "^6.1.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
